<?xml version="1.0"?>
<package format="2">
  <name>automow_planning</name>
  <version>0.0.0</version>
  <maintainer email="odroid@todo.todo">William Woodall</maintainer>
  <description>

     automow_planning

  </description>
  <author>William Woodall</author>
  <license>BSD</license>

  <url>http://ros.org/wiki/automow_planning</url>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
<depend>roscpp</depend>
<depend>roslib</depend>
<depend>tf</depend>
<depend>geometry_msgs</depend>
<depend>visualization_msgs</depend>
<depend>std_msgs</depend>
<depend>automow_pcb</depend>
<depend>automow_maps</depend>
<depend>actionlib</depend>
<depend>move_base_msgs</depend>
<depend>std_srvs</depend>






  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
